MDEV-299: SHOW EXPLAIN: Plan produced by SHOW EXPLAIN changes back and forth during query execution - Make SHOW EXPLAIN ignore range accesses when printing "Range checked for each record" plans.